Order: print tool order change template & style

--- a/sfsb/src/components/commerce/Orders/ToolPrint.pug
+++ b/sfsb/src/components/commerce/Orders/ToolPrint.pug
@@ -23,11 +23,11 @@
                 .tool-print__table-cell.tool-print__table-td {{tool.description}}
                 .tool-print__table-cell.tool-print__table-td {{tool.amount}}
                 .tool-print__table-cell.tool-print__table-td {{tool.itemPrice}}
-            .tool-print__table-footer.tool-print__table-row
-                .tool-print__table-cell
-                .tool-print__table-cell
-                .tool-print__table-cell
-                .tool-print__table-cell.tool-print__table-total {{totalAmount}}
-                .tool-print__table-cell.tool-print__table-total {{totalPrice}}
+        .tool-print__table-footer.tool-print__table-row
+            .tool-print__table-cell
+            .tool-print__table-cell
+            .tool-print__table-cell Итого:
+            .tool-print__table-cell.tool-print__table-total {{totalAmount}}
+            .tool-print__table-cell.tool-print__table-total {{totalPrice}}
 
     footer.tool-print__footer {{toolPrint.footer}}
